--- a/src/components/CreateElelemtsForm/createform.module.css
+++ b/src/components/CreateElelemtsForm/createform.module.css
@@ -19,7 +19,8 @@
 }
 
 .form_container{
-
+    
+    background-size: cover;
     margin: 50px;
     border: 1px solid #dddddd;
     display:flex ;
@@ -60,7 +61,7 @@
 }
 .input{
     text-indent: 20px;
-    border-radius: 60px;
+    
     border: none;
 }
 
