--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,9 @@
     font-style: normal;
 }
 
-
+body{
+    margin: 0 auto;
+}
 
 a{
     text-decoration: none;
@@ -29,3 +31,13 @@ a{
 }
 
 
+@media only screen and (max-width: 768px) {
+    body {
+      height: 100vh; 
+      padding: 0;/* Establecer la altura del body al 100% de la altura visible del viewport */
+    }
+  
+   
+  
+    /* Otros estilos específicos para dispositivos móviles */
+  }
